# superbot-idle

./: .gitattributes  .gitignore  .session-journal.md  CONSTITUTION.md  CONVENTIONS.md  PLATFORM-LIMITS.md  README.md  project.index.json  review-queue.md  substrate.config.json
.sessions/: 2026-07-10-order-000.md  2026-07-10-seed.md  2026-07-11-achievements-layer.md  2026-07-11-bounded-multipliers.md  2026-07-11-buy-max-math.md  2026-07-11-catalog-growth-3-packs.md  2026-07-11-catalog-wave-2.md  2026-07-11-catalog-wave-3.md  2026-07-11-close-out.md  2026-07-11-docs-grooming.md  2026-07-11-economy-design-v1.md  2026-07-11-gitattributes-union.md  2026-07-11-golden-save-corpus.md  2026-07-11-leading-zero-version-fix.md  2026-07-11-order-001-model-attribution.md  2026-07-11-property-tests-plugin-scoping.md  2026-07-11-render-layer.md  2026-07-11-setup-code-test-vectors.md  2026-07-11-setup-code-v1.md  2026-07-11-shop-composition.md  2026-07-11-sim-harness.md  2026-07-11-state-serialization.md  2026-07-11-theme-schema-v1.md  2026-07-11-themed-label-slots.md  2026-07-11-themes-space-potion.md  2026-07-11-timed-events-scoping.md  2026-07-11-upgrades-prestige.md  2026-07-12-catalog-wave-4.md  2026-07-12-install-auto-merge-enabler.md  2026-07-12-order-003-pytest-ci.md  2026-07-12-plug-001-adapter-slice.md  2026-07-12-plug-001-unpark-docs.md  2026-07-13-a10-v2-harness-sync.md  2026-07-13-a10-v2-provenance.md  2026-07-13-born-red-enabler-hardening.md  2026-07-13-eap-ci-skip-hole.md  2026-07-13-eap-night-groom.md  2026-07-13-eap-wave4-milestones.md  (+57 more)
.substrate/: state.json  (+3 more)
plugin/: README.md  conftest.py  pyproject.toml
plugin/superbot_idle_plugin/: manifest.py
plugin/tests/: test_manifest.py  test_render_forward.py
(+231 files in other folders)
