# superbot-idle-plugin — the idle-engine game-plugin adapter (PLUG-001).
#
# Four commands (`!idle` + `status` / `shop` / `prestige` subcommands), three
# render handlers, and one status panel (`idle.status`), declared as a
# SubsystemManifest and exported through the `sb.plugins` entry-point group.
# The superbot-next host discovers it at boot (sb/app/plugin_host.py),
# verifies it against the committed pin registry (plugins.lock.json),
# joint-compiles it with the in-tree manifests, and registers it on the same
# live seams — see docs/game-plugin-contract.md @ d3dba9b in the host repo.
# Mirrors the in-tree exemplar examples/superbot-plugin-hello/.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "superbot-idle-plugin"
version = "0.1.0"
description = "Idle-engine game plugin for superbot-next — the PLUG-001 adapter slice (one command + one status panel)."
requires-python = ">=3.11"
# No runtime dependencies: the host process provides the `sb` package.
dependencies = []

[project.optional-dependencies]
# Standalone development (authoring/tests outside a host checkout): install
# the host kernel from git — pinned to the binding-contract SHA for
# reproducible dev environments.
host = ["superbot-next @ git+https://github.com/menno420/superbot-next@d3dba9b"]

# The contract's discovery hook: the host imports this module (which registers
# the plugin's refs) and reads its MANIFEST attribute.
[project.entry-points."sb.plugins"]
idle = "superbot_idle_plugin.manifest"

[tool.setuptools.packages.find]
include = ["superbot_idle_plugin*"]
